level_zero-sys/src/ze_api.rs

extern "C" {
    #[doc = ""]
    #[doc = " @brief Retrieves external memory import and export of the device"]
    #[doc = ""]
    #[doc = " @details"]
    #[doc = "     - The application may call this function from simultaneous threads."]
    #[doc = "     - The implementation of this function should be lock-free."]
    #[doc = ""]
    #[doc = " @returns"]
    #[doc = "     - ::ZE_RESULT_SUCCESS"]
    #[doc = "     - ::ZE_RESULT_ERROR_UNINITIALIZED"]
    #[doc = "     - ::ZE_RESULT_ERROR_DEVICE_LOST"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_HANDLE"]
    #[doc = "         + `nullptr == hDevice`"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_POINTER"]
    #[doc = "         + `nullptr == pExternalMemoryProperties`"]
    pub fn zeDeviceGetExternalMemoryProperties(
        hDevice: ze_device_handle_t,
        pExternalMemoryProperties: *mut ze_device_external_memory_properties_t,
    ) -> ze_result_t;
}
impl _ze_device_p2p_property_flags_t {
    #[doc = "< Device supports access between peer devices."]
    pub const ZE_DEVICE_P2P_PROPERTY_FLAG_ACCESS: _ze_device_p2p_property_flags_t =
        _ze_device_p2p_property_flags_t(1);
}
impl _ze_device_p2p_property_flags_t {
    #[doc = "< Device supports atomics between peer devices."]
    pub const ZE_DEVICE_P2P_PROPERTY_FLAG_ATOMICS: _ze_device_p2p_property_flags_t =
        _ze_device_p2p_property_flags_t(2);
}
impl _ze_device_p2p_property_flags_t {
    pub const ZE_DEVICE_P2P_PROPERTY_FLAG_FORCE_UINT32: _ze_device_p2p_property_flags_t =
        _ze_device_p2p_property_flags_t(2147483647);
}
impl ::std::ops::BitOr<_ze_device_p2p_property_flags_t> for _ze_device_p2p_property_flags_t {
    type Output = Self;
    #[inline]
    fn bitor(self, other: Self) -> Self {
        _ze_device_p2p_property_flags_t(self.0 | other.0)
    }
}
impl ::std::ops::BitOrAssign for _ze_device_p2p_property_flags_t {
    #[inline]
    fn bitor_assign(&mut self, rhs: _ze_device_p2p_property_flags_t) {
        self.0 |= rhs.0;
    }
}
impl ::std::ops::BitAnd<_ze_device_p2p_property_flags_t> for _ze_device_p2p_property_flags_t {
    type Output = Self;
    #[inline]
    fn bitand(self, other: Self) -> Self {
        _ze_device_p2p_property_flags_t(self.0 & other.0)
    }
}
impl ::std::ops::BitAndAssign for _ze_device_p2p_property_flags_t {
    #[inline]
    fn bitand_assign(&mut self, rhs: _ze_device_p2p_property_flags_t) {
        self.0 &= rhs.0;
    }
}
#[repr(transparent)]
#[doc = ""]
#[doc = " @brief Supported device peer-to-peer property flags"]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub struct _ze_device_p2p_property_flags_t(pub u32);
#[doc = ""]
#[doc = " @brief Supported device peer-to-peer property flags"]
pub use self::_ze_device_p2p_property_flags_t as ze_device_p2p_property_flags_t;
#[doc = ""]
#[doc = " @brief Device peer-to-peer properties queried using"]
#[doc = "        ::zeDeviceGetP2PProperties"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _ze_device_p2p_properties_t {
    #[doc = "< [in] type of this structure"]
    pub stype: ze_structure_type_t,
    #[doc = "< [in,out][optional] pointer to extension-specific structure"]
    pub pNext: *mut ::std::os::raw::c_void,
    #[doc = "< [out] 0 (none) or a valid combination of"]
    #[doc = "< ::ze_device_p2p_property_flags_t"]
    pub flags: ze_device_p2p_property_flags_t,
}
#[test]
fn bindgen_test_layout__ze_device_p2p_properties_t() {
    assert_eq!(
        ::std::mem::size_of::<_ze_device_p2p_properties_t>(),
        24usize,
        concat!("Size of: ", stringify!(_ze_device_p2p_properties_t))
    );
    assert_eq!(
        ::std::mem::align_of::<_ze_device_p2p_properties_t>(),
        8usize,
        concat!("Alignment of ", stringify!(_ze_device_p2p_properties_t))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_p2p_properties_t>())).stype as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_p2p_properties_t),
            "::",
            stringify!(stype)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_p2p_properties_t>())).pNext as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_p2p_properties_t),
            "::",
            stringify!(pNext)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_p2p_properties_t>())).flags as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_p2p_properties_t),
            "::",
            stringify!(flags)
        )
    );
}
extern "C" {
    #[doc = ""]
    #[doc = " @brief Retrieves peer-to-peer properties between one device and a peer"]
    #[doc = "        devices"]
    #[doc = ""]
    #[doc = " @details"]
    #[doc = "     - The application may call this function from simultaneous threads."]
    #[doc = "     - The implementation of this function should be lock-free."]
    #[doc = ""]
    #[doc = " @returns"]
    #[doc = "     - ::ZE_RESULT_SUCCESS"]
    #[doc = "     - ::ZE_RESULT_ERROR_UNINITIALIZED"]
    #[doc = "     - ::ZE_RESULT_ERROR_DEVICE_LOST"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_HANDLE"]
    #[doc = "         + `nullptr == hDevice`"]
    #[doc = "         + `nullptr == hPeerDevice`"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_POINTER"]
    #[doc = "         + `nullptr == pP2PProperties`"]
    pub fn zeDeviceGetP2PProperties(
        hDevice: ze_device_handle_t,
        hPeerDevice: ze_device_handle_t,
        pP2PProperties: *mut ze_device_p2p_properties_t,
    ) -> ze_result_t;
}
extern "C" {
    #[doc = ""]
    #[doc = " @brief Queries if one device can directly access peer device allocations"]
    #[doc = ""]
    #[doc = " @details"]
    #[doc = "     - Any device can access any other device within a node through a"]
    #[doc = "       scale-up fabric."]
    #[doc = "     - The following are conditions for CanAccessPeer query."]
    #[doc = "         + If both device and peer device are the same then return true."]
    #[doc = "         + If both sub-device and peer sub-device are the same then return"]
    #[doc = "           true."]
    #[doc = "         + If both are sub-devices and share the same parent device then"]
    #[doc = "           return true."]
    #[doc = "         + If both device and remote device are connected by a direct or"]
    #[doc = "           indirect scale-up fabric or over PCIe (same root complex or shared"]
    #[doc = "           PCIe switch) then true."]
    #[doc = "         + If both sub-device and remote parent device (and vice-versa) are"]
    #[doc = "           connected by a direct or indirect scale-up fabric or over PCIe"]
    #[doc = "           (same root complex or shared PCIe switch) then true."]
    #[doc = "     - The application may call this function from simultaneous threads."]
    #[doc = "     - The implementation of this function should be lock-free."]
    #[doc = ""]
    #[doc = " @returns"]
    #[doc = "     - ::ZE_RESULT_SUCCESS"]
    #[doc = "     - ::ZE_RESULT_ERROR_UNINITIALIZED"]
    #[doc = "     - ::ZE_RESULT_ERROR_DEVICE_LOST"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_HANDLE"]
    #[doc = "         + `nullptr == hDevice`"]
    #[doc = "         + `nullptr == hPeerDevice`"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_POINTER"]
    #[doc = "         + `nullptr == value`"]
    pub fn zeDeviceCanAccessPeer(
        hDevice: ze_device_handle_t,
        hPeerDevice: ze_device_handle_t,
        value: *mut ze_bool_t,
    ) -> ze_result_t;
}
extern "C" {
    #[doc = ""]
    #[doc = " @brief Returns current status of the device."]
    #[doc = ""]
    #[doc = " @details"]
    #[doc = "     - Once a device is reset, this call will update the OS handle attached"]
    #[doc = "       to the device handle."]
    #[doc = "     - The application may call this function from simultaneous threads with"]
    #[doc = "       the same device handle."]
    #[doc = "     - The implementation of this function must be thread-safe."]
    #[doc = ""]
    #[doc = " @returns"]
    #[doc = "     - ::ZE_RESULT_SUCCESS"]
    #[doc = "     - ::ZE_RESULT_ERROR_UNINITIALIZED"]
    #[doc = "     - ::ZE_RESULT_ERROR_DEVICE_LOST"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_HANDLE"]
    #[doc = "         + `nullptr == hDevice`"]
    #[doc = "     - ::ZE_RESULT_SUCCESS"]
    #[doc = "         + Device is available for use."]
    #[doc = "     - ::ZE_RESULT_ERROR_DEVICE_LOST"]
    #[doc = "         + Device is lost; must be reset for use."]
    pub fn zeDeviceGetStatus(hDevice: ze_device_handle_t) -> ze_result_t;
}
impl _ze_context_flags_t {
    #[doc = "< reserved for future use"]
    pub const ZE_CONTEXT_FLAG_TBD: _ze_context_flags_t = _ze_context_flags_t(1);
}
impl _ze_context_flags_t {
    pub const ZE_CONTEXT_FLAG_FORCE_UINT32: _ze_context_flags_t = _ze_context_flags_t(2147483647);
}
impl ::std::ops::BitOr<_ze_context_flags_t> for _ze_context_flags_t {
    type Output = Self;
    #[inline]
    fn bitor(self, other: Self) -> Self {
        _ze_context_flags_t(self.0 | other.0)
    }
}
impl ::std::ops::BitOrAssign for _ze_context_flags_t {
    #[inline]
    fn bitor_assign(&mut self, rhs: _ze_context_flags_t) {
        self.0 |= rhs.0;
    }
}
impl ::std::ops::BitAnd<_ze_context_flags_t> for _ze_context_flags_t {
    type Output = Self;
    #[inline]
    fn bitand(self, other: Self) -> Self {
        _ze_context_flags_t(self.0 & other.0)
    }
}
impl ::std::ops::BitAndAssign for _ze_context_flags_t {
    #[inline]
    fn bitand_assign(&mut self, rhs: _ze_context_flags_t) {
        self.0 &= rhs.0;
    }
}
#[repr(transparent)]
#[doc = ""]
#[doc = " @brief Supported context creation flags"]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub struct _ze_context_flags_t(pub u32);
#[doc = ""]
#[doc = " @brief Supported context creation flags"]
pub use self::_ze_context_flags_t as ze_context_flags_t;
#[doc = ""]
#[doc = " @brief Context descriptor"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _ze_context_desc_t {
    #[doc = "< [in] type of this structure"]
    pub stype: ze_structure_type_t,
    #[doc = "< [in][optional] pointer to extension-specific structure"]
    pub pNext: *const ::std::os::raw::c_void,
    #[doc = "< [in] creation flags."]
    #[doc = "< must be 0 (default) or a valid combination of ::ze_context_flags_t;"]
    #[doc = "< default behavior may use implicit driver-based heuristics."]
    pub flags: ze_context_flags_t,
}
#[test]
fn bindgen_test_layout__ze_context_desc_t() {
    assert_eq!(
        ::std::mem::size_of::<_ze_context_desc_t>(),
        24usize,
        concat!("Size of: ", stringify!(_ze_context_desc_t))
    );
    assert_eq!(
        ::std::mem::align_of::<_ze_context_desc_t>(),
        8usize,
        concat!("Alignment of ", stringify!(_ze_context_desc_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_ze_context_desc_t>())).stype as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_context_desc_t),
            "::",
            stringify!(stype)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_ze_context_desc_t>())).pNext as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_context_desc_t),
            "::",
            stringify!(pNext)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_ze_context_desc_t>())).flags as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_context_desc_t),
            "::",
            stringify!(flags)
        )
    );
}
